--- a/vignettes/MethylAidData.bib
+++ b/vignettes/MethylAidData.bib
@@ -22,6 +22,24 @@
    Pages="3435--3437"
 }
 
+@Article{Bonder2017,
+   Author="Bonder, M. J. et al",
+   Title="{{D}isease variants alter transcription factor levels and methylation of their binding sites}",
+   Journal="Nat. Genet.",
+   Year="2017",
+   Volume="49",
+   Number="1",
+   Pages="131--138",
+   Month="Jan"
+}
 
-
-
+@Article{Burney1994,
+   Author="Burney, P. G.  and Luczynska, C.  and Chinn, S.  and Jarvis, D. ",
+   Title="{{T}he {E}uropean {C}ommunity {R}espiratory {H}ealth {S}urvey}",
+   Journal="Eur. Respir. J.",
+   Year="1994",
+   Volume="7",
+   Number="5",
+   Pages="954--960",
+   Month="May"
+}
